fix word-wrap on android

--- a/webapp/angular/src/styles.css
+++ b/webapp/angular/src/styles.css
@@ -28,6 +28,7 @@ div.card {
 
 div.card .title {
     font-size: x-large;
+    word-wrap: break-word;
 }
 
 div.card .info {
